--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     environment:
       LEIN_ROOT: nbd
       JVM_OPTS: -Xmx3200m
+      PROJECT: dixel/huemoe
     steps:
       - checkout
       - restore_cache:
@@ -17,6 +18,11 @@ jobs:
             - ~/.m2
           key: huemoe-{{ checksum "project.clj" }}
       - run: lein do test, uberjar
-      - store_artifacts:
-          path: target/huemoe.jar
-          destination: uberjar
+      - setup_remote_docker
+      - run:
+          name: Publishing to docker hub
+          command: |
+            VERSION=`head -n 1 project.clj | awk '{print $3}' | tr -d '"'`.$CIRCLE_BUILD_NUM
+            docker build -t ${PROJECT}:${VERSION} .
+            docker login -u $DOCKER_USER -p $DOCKER_PASS
+            docker push ${PROJECT}:${VERSION}
