make circleci build only master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,9 @@ version: 2
 jobs:
   build:
     working_directory: ~/huemoe
+    branches:
+      only:
+        - master
     docker:
       - image: circleci/clojure:lein-2.7.1
     environment:
